# DrupEnum

./: LICENSE  README.md  pyproject.toml  test-modules.txt
drupenum/: __init__.py  cli.py  config.py  core.py  http.py  modules.py  osv.py  output.py  parsing.py
drupenum/data/: drupal_core_hashes.sqlite  drupal_modules.sqlite
